# sources

./: .gitignore  LICENSE  Makefile  README.md
GNOME/: Makefile
GNOME/apps/: GNOME-apps-3.15.1.txt  Makefile
GNOME/core/: GNOME-core-3.15.1.txt  Makefile
GNU/: Makefile
GNU/a2ps/: Makefile
GNU/acct/: Makefile
GNU/aspell/: Makefile
GNU/autoconf/: Makefile
GNU/autoconf-archive/: Makefile
GNU/automake/: Makefile
GNU/bash/: Makefile
GNU/bc/: Makefile
GNU/binutils/: Makefile  NOTE.TXT
GNU/bison/: Makefile
GNU/coreutils/: Makefile
GNU/cpio/: Makefile
GNU/ddrescue/: Makefile
GNU/diffutils/: Makefile
GNU/ed/: Makefile
GNU/enscript/: Makefile
GNU/findutils/: Makefile
GNU/gawk/: Makefile
GNU/gcc/: Makefile
GNU/gdb/: Makefile
GNU/gdbm/: Makefile
GNU/gettext/: Makefile
GNU/glibc/: Makefile
GNU/gmp/: Makefile
GNU/gperf/: Makefile
GNU/grep/: Makefile
GNU/groff/: Makefile
GNU/grub/: Makefile
GNU/gss/: Makefile
GNU/guile/: Makefile
GNU/gzip/: Makefile
GNU/help2man/: Makefile
GNU/inetutils/: Makefile
GNU/less/: Makefile
GNU/libiconv/: Makefile
GNU/libidn/: Makefile
GNU/libidn2/: Makefile
GNU/libtasn1/: Makefile
GNU/libtool/: Makefile
GNU/libunistring/: Makefile
GNU/m4/: Makefile
GNU/make/: Makefile
GNU/make-savannah/: Makefile
GNU/mpc/: Makefile  (+1 more)
KDE/: Makefile
Linux/: Makefile
U-Boot/: Makefile
Wayland/: Makefile
X.org/: Makefile  X.org-X11R7.7.txt
dict/: Makefile
hal/: Makefile
hal/ump/r3p0-04rel0/config/src/: Makefile.am
newlib/: Makefile
tools/: Makefile
uClinux/: Makefile
(+809 files in other folders)
